--- a/puzzlers/pzzlr-005.html
+++ b/puzzlers/pzzlr-005.html
@@ -39,28 +39,28 @@ class C extends B {
 new C
 </pre>
   <ol>  
-    <li id="correct-answer">
+    <li id="correct-answer">Prints:
       <pre class="prettyprint lang-scala">
 In A: foo: 0, bar: 0
 In B: foo: 25, bar: 0
 In C: foo: 25, bar: 99
 </pre>
     </li>
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 In A: foo: 0, bar: 10
 In B: foo: 25, bar: 10
 In C: foo: 25, bar: 99
 </pre>
     </li>
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 In A: foo: 0, bar: 0
 In B: foo: 25, bar: 99
 In C: foo: 25, bar: 99
 </pre>
     </li>
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 In A: foo: 25, bar: 99
 In B: foo: 25, bar: 99
