--- a/contact.html
+++ b/contact.html
@@ -148,6 +148,7 @@
               <li><a href="/#pzzlr-042" id="pzzlr-042">The Devil Is in the Defaults</a></li>
               <li><a href="/#pzzlr-043" id="pzzlr-043">Market Precedence</a></li>
               <li><a href="/#pzzlr-044" id="pzzlr-044">Float or Sink?</a></li>
+              <li><a href="/#pzzlr-045" id="pzzlr-045">Stringy Conversions</a></li>
               <li><a href="/#pzzlr-047" id="pzzlr-047">A Listful of Dollars</a></li>
               <li class="divider"></li>
             </ul>
