--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
               <li><a href="#" id="pzzlr-042">The Devil Is in the Defaults</a></li>
               <li><a href="#" id="pzzlr-043">Market Precedence</a></li>
               <li><a href="#" id="pzzlr-044">Float or Sink?</a></li>
+              <li><a href="#" id="pzzlr-045">Stringy Conversions</a></li>
               <li><a href="#" id="pzzlr-047">A Listful of Dollars</a></li>
               <li class="divider"></li>
             </ul>
