Updating code sample for 'Implicitly Surprising'
- moving one of the implicit values to make potential scope conflicts more plausible
- renaming methods
- reversing the failed and successful invocations

--- a/puzzlers/pzzlr-019.html
+++ b/puzzlers/pzzlr-019.html
@@ -18,23 +18,23 @@
 <div class="code-snippet">
 <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
-def getFunction = {
-   def sum(x: Int)(y: Int)(implicit z: Int) = x+y+z
-   implicit val z1 = 2
-   sum(1) _
+implicit val z1 = 2
+def addTo(n: Int) = {
+   def add(x: Int)(y: Int)(implicit z: Int) = x + y + z
+   add(n) _
 }
 
-val f = getFunction
 implicit val z2 = 3
-f(2)(3)
-f(2)
+val addTo1 = addTo(1)
+addTo1(2)
+addTo1(2)(3)
 </pre>
 
 <ol>
 <li>Prints:
 <pre class="prettyprint lang-scala">
-6
 5
+6
 </pre>
 </li>
 
@@ -45,17 +45,17 @@ f(2)
 </pre>
 </li>
 
-<li id="correct-answer">The first invocation of <tt>f</tt> fails with a compilation exception, and the second prints:
+<li id="correct-answer">The first invocation of <tt>f</tt> prints:
 <pre class="prettyprint lang-scala">
 5
 </pre>
+and the second fails with a compilation exception
 </li>
 
-<li>The first invocation of <tt>f</tt> prints:
+<li>The first invocation of <tt>f</tt> fails with a compilation exception, and the second prints:
 <pre class="prettyprint lang-scala">
 6
 </pre>
-and the second fails with a compilation exception
 </li>
 
 </ol>
@@ -65,35 +65,34 @@ and the second fails with a compilation exception
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
-When eta-expansion is applied on method <tt>sum</tt>, the result is a function of type <tt>Int => Int</tt>,
+When eta expansion is applied to method <tt>add</tt>, the result is a function of type <tt>Int => Int</tt>,
 i.e. the implicit parameters are resolved <em>before</em> eta expansion is applied. Therefore the implicit value
 <tt>z1 = 2</tt> is used as value for the implicit parameter <tt>z</tt>.
 </p><p>
 If no implicit parameter were available, the compiler would issue an error message:
 <pre class="prettyprint lang-scala">
-scala> def sum(x: Int)(y: Int)(implicit z: Int) = x+y+z
-sum: (x: Int)(y: Int)(implicit z: Int)Int
+scala> def add(x: Int)(y: Int)(implicit z: Int) = x + y + z
+add: (x: Int)(y: Int)(implicit z: Int)Int
 
-scala> sum(1) _
+scala> add(1) _
 <console>:9: error: could not find implicit value for parameter z: Int
-              sum(1) _
+              add(1) _
                  ^
 </pre>
 </p><p>
-One could also specify an explicit value for <tt>z</tt> if no implicit value is defined in the current context, but then
-the type has to be specified on the placeholder.
+One could also specify an explicit value for <tt>z</tt> if no implicit value is defined in the current context, but then the type has to be specified on the placeholder.
 <pre class="prettyprint lang-scala">
-scala> val f2 = sum(1)(_: Int)(3)
-f2: Int => Int = <function1>
+scala> val addTo1And3 = add(1)(_: Int)(3)
+addTo1And3: Int => Int = <function1>
 </pre>
 </p><p>
-This explains the result, i.e. the invocation of <tt>f(2)</tt> returns <tt>5</tt> (<tt>1</tt> + <em>&lt;param&gt;</em> + <tt>2</tt>) and
-<tt>f(2)(3)</tt> fails with a compilation error as on the object <tt>5</tt> (result of <tt>f(2)</tt>) no method <tt>apply</tt> is defined.
+This explains the result, i.e. the invocation of <tt>addTo1(2)</tt> returns <tt>5</tt> (<tt>1</tt> + <em>&lt;param&gt;</em> + <tt>2</tt>) and
+<tt>addTo1(2)(3)</tt> fails with a compilation error as on the object <tt>5</tt> (result of <tt>addTo1(2)</tt>) no method <tt>apply</tt> is defined.
 <pre class="prettyprint lang-scala">
-scala> f(2)(3)
+scala> addTo1(2)(3)
 <console>:10: error: Int does not take parameters
-              f(2)(3)
-                  ^
+              addTo1(2)(3)
+                       ^
 </pre>
 </p>
 </div>
