--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <li><a href="#" id="pzzlr-039">Accepts Any Args</a></li>
               <li><a href="#" id="pzzlr-040">Set the Record Straight</a></li>
               <li><a href="#" id="pzzlr-041">Signs of Trouble</a></li>
-              <li><a href="#" id="pzzlr-042">The Devil is in the Defaults</a></li>
+              <li><a href="#" id="pzzlr-042">The Devil Is In the Defaults</a></li>
               <li><a href="#" id="pzzlr-043">Market Precedence</a></li>
               <li><a href="#" id="pzzlr-044">Float or Sink?</a></li>
               <li class="divider"></li>
